Fix border-radius being wrong on mobile

--- a/site.css
+++ b/site.css
@@ -77,6 +77,7 @@ body {
   img#the_img {
     width: 100%;
     height: auto;
+    border-radius: 10px 10px 0px 0px;
   }
 }
 
